[49] Fix spacing of expand more

--- a/src/styling/Header.css
+++ b/src/styling/Header.css
@@ -102,11 +102,11 @@
 }
 
 .optionsContent {
-  display: block;
+  display: none;
   position: absolute;
   background-color: #747474;
   border-radius:10px;
-  margin: 0.5% 0% 0% -8%;
+  margin: 0.5% 0% 0% -5%;
 }
 
 .optionsMenu:focus {
@@ -120,7 +120,7 @@
 .optionsButtons {
   position: relative;
   border: none;
-  padding:20px;
+  padding:30px;
   width:100%;
   color:white;
   font-size:20px;
